<resources>
    <string name="app_name">AnalyticsForSpotify</string>
    <string name="login">Login</string>
    <string name="add_to_liked_songs">Add to Liked Songs</string>
    <string name="username">Username</string>
    <string name="last_song_played">Last Song Played</string>
    <string name="logout">Log out</string>
    <string name="top_tracks">My Top Tracks</string>
    <string name="_1_month">1 Month</string>
    <string name="_6_months">6 Months</string>
    <string name="all_time">All Time</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">artist name</string>
    <string name="_1">1</string>
    <string name="average_song_length">Average song length:</string>
    <string name="album_art">album art</string>
    <string name="summary">Summary</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="welcome_to_n_spotify_analytics">Welcome to  Spotify Analytics</string>
    <string name="powered_by">Powered by</string>
    <string name="spotify_logo_with_text">Spotify logo with text</string>
    <string name="login_background_image">login background image</string>

</resources>
