<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/topTracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="32dp"
        android:text="@string/top_tracks"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topTracks">

        <RadioButton
            android:id="@+id/allTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_time" />

        <RadioButton
            android:id="@+id/6Months"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6_months" />

        <RadioButton
            android:id="@+id/1Month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_month" />

    </RadioGroup>

    <TextView
        android:id="@+id/user"
        android:layout_width="45dp"
        android:layout_height="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        app:layout_constraintEnd_toStartOf="@+id/logout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="87dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/songList"
        android:layout_width="413dp"
        android:layout_height="642dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>